# htmx-rust

./: Cargo.toml  readme.md
src/: main.rs
static/: index.html
