[package]
name = "htmx-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
reqwest = { version = "0.12.5", features = ["json"] }
